--- a/src/Components/Clicker/Clicker.css
+++ b/src/Components/Clicker/Clicker.css
@@ -19,4 +19,10 @@
   top: 100px;
   font-size: 100px;
 }
+
+.store {
+  position: fixed;
+  top: 15vh;
+  right: 50px;
+}
 /*# sourceMappingURL=Clicker.css.map */
