--- a/src/Components/Clicker/Clicker.css
+++ b/src/Components/Clicker/Clicker.css
@@ -1,28 +1,9 @@
-.clicker {
-  position: fixed;
-  width: 120px;
-  height: 120px;
-  margin-left: 50vw;
-}
-
 .clicker :hover {
   cursor: pointer;
 }
 
-.clicker :active {
-  background-color: cyan;
-}
-
-.money {
-  position: fixed;
+.info {
   color: darkgreen;
-  top: 100px;
   font-size: 100px;
-}
-
-.store {
-  position: fixed;
-  top: 15vh;
-  right: 50px;
 }
 /*# sourceMappingURL=Clicker.css.map */
