--- a/src/Components/Clicker/Clicker.scss
+++ b/src/Components/Clicker/Clicker.scss
@@ -1,23 +1,9 @@
 .clicker{
-    position: fixed;
-    width: 120px;
-    height: 120px;
-    margin-left: 50vw;
     :hover{
         cursor: pointer;
     }
-    :active{
-        background-color: cyan;
-    }
 }
-.money{
-    position: fixed;
+.info{
     color: darkgreen;
-    top: 100px;
     font-size: 100px;
-}
-.store{
-    position: fixed;
-    top:15vh;
-    right: 50px;
 }
