--- a/src/Components/ProgressBar/ProgressBar.css
+++ b/src/Components/ProgressBar/ProgressBar.css
@@ -6,7 +6,7 @@
 
 .filler {
   height: 100%;
-  background-color: blue;
+  background-color: crimson;
   -webkit-transition: width .1s ease-in;
   transition: width .1s ease-in;
 }
